fix: resolve bugs in user controllers
* Add firstname and lastname in select projection
* Check if provided role has already been assigned to the user
* Update user count after role has been assigned to the user
